--- a/sections/bitacora.tex
+++ b/sections/bitacora.tex
@@ -1,1 +1,5 @@
 \section{Problemas afrontados y soluciones}
+
+Una incorrecta elección de Rt y Ct fuera de los valores recomendados generaba variaciones muy grandes de la frecuencia de switching, 
+lo cual causaba inestabilidad en la tensión de salida. 
+
