--- a/sections/diseño.tex
+++ b/sections/diseño.tex
@@ -94,3 +94,11 @@ Se utiliza para almacenar energía y permitir su transferencia.
 Por el inductor circula una corriente continua. Si la misma es muy elevada puede saturar el núcleo magnético. 
 
 
+Saturación magnética
+
+Cualquier componente de continua puede causar la saturación magnética del núcleo, 
+elevando la corriente magnetizante. 
+Para minimizar los efectos de la saturación, se puede utilizar un núcleo más grande o incluir un entrehierro.
+El entrehierro permite que exista en el núcleo, además de una zona con alta permeabilidad propia del material magnético, 
+ otra zona de baja permeabilidad propia del espacio de aire. 
+ De esta forma en condiciones normales el flujo circula por el material magnético y en caso de saturación circula por el entrehierro 
