Bibliografía gate drivers

--- a/biblio.bib
+++ b/biblio.bib
@@ -64,3 +64,11 @@
   title  = {LTspice},
   url    = {https://www.analog.com/en/design-center/design-tools-and-calculators/ltspice-simulator.html}
 }
+
+@techreport{gatedrivers,
+  title = {Fundamentals of MOSFET and IGBT Gate Driver Circuits},
+  author = {Laszlo Balogh},
+  year = {2018},
+  institution = {Texas Instruments},
+  url = {https://www.ti.com/lit/ml/slua618a/slua618a.pdf}
+}
